Add Thrift extension

--- a/.gitmodules
+++ b/.gitmodules
@@ -1990,6 +1990,10 @@
 	path = extensions/the-dark-side
 	url = https://github.com/Imgkl/the-dark-side.git
 
+[submodule "extensions/thrift"]
+	path = extensions/thrift
+	url = https://github.com/likaihua/zed-thrift.git
+
 [submodule "extensions/tmux"]
 	path = extensions/tmux
 	url = https://github.com/dangh/zed-tmux.git
