--- a/extensions.toml
+++ b/extensions.toml
@@ -2036,6 +2036,10 @@ version = "0.0.1"
 submodule = "extensions/the-dark-side"
 version = "0.3.0"
 
+[thrift]
+submodule = "extensions/thrift"
+version = "0.0.1"
+
 [tmux]
 submodule = "extensions/tmux"
 version = "0.0.2"
